--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".MenuActivity" />
-        <activity android:name=".CreateCVActivity"></activity>
+        <activity android:name=".CreateCVActivity" />
+        <activity android:name=".EducationActivity"></activity>
     </application>
 
 </manifest>
