Created CVTipsWorker - parses html using JSoup Changed the icon of the app

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.monic.cvgenerator">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -23,7 +23,8 @@
         <activity android:name=".ITSkillsActivity" />
         <activity android:name=".OtherSkillsActivity" />
         <activity android:name=".CertificatesActivity" />
-        <activity android:name=".ViewCVActivity"></activity>
+        <activity android:name=".ViewCVActivity" />
+        <activity android:name=".TipsActivity"></activity>
     </application>
 
 </manifest>
